# django-setup

./: .env.sample  .flake8  .pre-commit-config.yaml  README.md  hello.py  mypy.ini  pyproject.toml
.github/workflow/: ci.yaml  ci.yml
.github/workflows/: ci.yaml
apps/book/: admin.py  models.py
apps/book/migrations/: 0001_initial.py
config/: settings.py
