[project]
name = "project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django-environ>=0.12.0",
    "django>=5.1.4",
    "psycopg2-binary>=2.9.10",
    "flake8>=7.1.1",
    "black>=24.10.0",
    "isort>=5.13.2",
    "vulture>=2.14",
    "mypy>=1.14.1",
    "ruff>=0.9.1",
    "django-stubs>=5.1.2",
]

[tool.ruff]
# Enable Pyflakes `E` and `F` codes by default.
select = ["E", "F"]
ignore = ["E501", "E741"] 

