[project]
name = "project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django-environ>=0.12.0",
    "django>=5.1.4",
    "psycopg2-binary>=2.9.10",
    "flake8>=7.1.1",
    "black>=24.10.0",
    "isort>=5.13.2",
    "vulture>=2.14",
    "mypy>=1.14.1",
    "ruff>=0.9.1",
    "django-stubs>=5.1.2",
    "pyright>=1.1.391",
]



[tool.black]
target-version = ["py312"]


[tool.ruff]
line-length = 120
lint.select = ["E", "F"]
lint.ignore = ["E501", "E741"] 
exclude = [".bzr", ".direnv", ".eggs", ".git", ".hg", ".mypy_cache", ".nox", ".pants.d", ".ruff_cache", ".svn", ".tox", ".venv", "__pypackages__", "_build", "buck-out", "build", "dist", "node_modules", "venv"]


[tool.vulture]
exclude = [
  "*/settings.py",
  "*/settings/*.py",
  "*/migrations/*.py",
]

ignore_decorators = [
  "@receiver",
  "@register.filter",
  "@register.inclusion_tag",
  "@register.simple_tag",
  "@admin.action",
  "@admin.display",
  "@admin.register",
  "@pytest.fixture",
]

ignore_names = [
  "*Config",  
  "clean_*",
  "variable_*",
  "Meta",
  "urlpatterns",
  "args",
  "get_extra",
  "get_fieldsets",
  "has_add_permission",
  "has_change_permission",
  "has_delete_permission",
  "has_view_permission",
  "lookups",
  "variable",
  "kwargs",
  "request"
]

paths = [
    "apps"
]


[tool.pyright]
exclude = [
    "**/__pycache__",
    "**/snap_test_*.py",
    ".venv/",
    "**/migrations/*.py",
]
reportMissingImports = true
reportMissingTypeStubs = false
venvPath = "."
venv = ".venv"
